# xhs

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  basic.html  comment.py  config.ini  crawl.html  creator.html  data.db  de.py  del.py  genindex.html  index.html  main.py  objects.inv  requirements.txt  say.py  search.html  searchindex.js  setup.cfg  setup.py  stealth.min.js  tox.ini  upload_to_douyin.py  xhsfromyun.py  xhsgetuser.py
.github/workflows/: doc.yml  (+2 more)
_modules/: index.html
_sources/: basic.rst.txt  crawl.rst.txt  creator.rst.txt  index.rst.txt
_static/: documentation_options.js
docs/: conf.py  crawl.rst  creator.rst  index.rst  requirements.txt
example/: basic_sign_server.py  basic_sign_usage.py  basic_usage.py  login_phone.py  login_qrcode.py  login_qrcode_from_creator.py
plus/: core_plus.py  data.db  db_utils.py  sql_utils.py
source/: xhs.html
tests/: __init__.py  test_help.py  test_xhs.py  utils.py
xhs/: __init__.py  __version__.py  core.py  exception.py  help.py
xhs-api/: Dockerfile  README.md  app.py
xhs-gpt/: README.md  pyproject.toml
xhs-gpt/app/: server.py
xhs-gpt/xhs_gpt/: __init__.py  patch.py  stealth.min.js  utils.py
xhs-gpt/xhs_gpt/agents/: __init__.py  run.py
xhs-gpt/xhs_gpt/agents/create_note/: __init__.py  run.py
xhs-gpt/xhs_gpt/agents/get_feed/: __init__.py  run.py
xhs-gpt/xhs_gpt/agents/get_note/: __init__.py  run.py
xhs-gpt/xhs_gpt/agents/login_with_phone/: __init__.py  run.py
xhs-gpt/xhs_gpt/agents/login_with_qrcode/: __init__.py  run.py
(+3 files in other folders)
